<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_service_que">How was the service ?</string>
    <string name="tip1">Amazing (20%)</string>
    <string name="tip2">Good (18%)</string>
    <string name="tip3">Okay (15%)</string>
    <string name="round">Round up tip ?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="total_amount">Total Amount: %s</string>
</resources>